--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Trabajo Landing page de clase</title>
     <!-- enlace a favicon -->
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
+    <!-- enlace a font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- enlace al estilo -->
     <link rel="stylesheet" href="estilos/estilo.css">
     <!-- enlace a libreria jquery, en mi caso para smooth scroll-->
@@ -31,8 +33,8 @@
             <a href="#tipos">Tipos</a>
             <a href="#contacta">Contacta</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-              <i class="fa fa-bars"></i>
-            </a>
+               &#9776;
+           </a>
           </div>
         </nav>
         <!-- hero section básica: una imagen de fondo y un rótulo -->
@@ -115,7 +117,7 @@
         
         <footer id ="contacta" class="grid3col">
            <!-- Contacto -->
-           <div class="col3">
+           <div class="col3f">
               <h3>Contáctame:</h3>
               <p>Teléfono: 669005713</p>
               <p>Email: pablo.reyes.alu@iescampanillas.com</p>
